[project]
name = "aass-agents"
version = "0.1.0"
description = "Autonomous AI Agent Company System — 8 departments powered by Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.27.4",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pytrends>=4.9.2",
    "feedparser>=6.0.12",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
